# SPD-FRD-test

spd_t4_threshold_test/: Makefile  README.md  pyproject.toml
spd_t4_threshold_test/src/spd_t4/: __init__.py  cli.py  config.py
spd_t4_threshold_test/src/spd_t4/io/: artifacts.py  schema.py
spd_t4_threshold_test/src/spd_t4/metrics/: __init__.py  change_point.py  delta.py  early_warning.py  tension.py  thresholds.py
spd_t4_threshold_test/src/spd_t4/models/: __init__.py  linear_predictor.py  rolling_fit.py
spd_t4_threshold_test/src/spd_t4/plots/: plot_diagnostics.py  plot_phase.py  plot_timeseries.py
spd_t4_threshold_test/src/spd_t4/simulate/: __init__.py  hopf.py  integrators.py  schedules.py
spd_t4_threshold_test/tests/: test_delta_behavior.py  test_event_detection.py  test_reproducibility.py  test_threshold_logic.py
